--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
     port: 8080
 
 spring:
+    profiles: loca
     datasource:
         driver-class-name: org.h2.Driver
         url: jdbc:h2:tcp://localhost/~/test
